# bitvavo-connector

./: .gitignore  .gitmodules  BitvavoClient.cpp  BitvavoClient.h  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  conanfile.py  main.cpp
.github/workflows/: build.yml
network/: WssWorker.cpp  WssWorker.h
